unpackaged/main/default/objects/clcommon__Job__c/clcommon__Job__c.object-meta.xml
<CustomObject>
    <label>Job</label>
    <nameField>
        <displayFormat>J-{00000}</displayFormat>
        <label>Autofield</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>