unpackaged/main/default/objects/clcommon__Job__c/fields/clcommon__Class__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Class__c</fullName>
    <label>Class</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>