unpackaged/main/default/objects/clcommon__Job__c/fields/clcommon__DAG__c.field-meta.xml
<CustomField>
    <fullName>clcommon__DAG__c</fullName>
    <label>DAG</label>
    <referenceTo>clcommon__DAG_Schedule__c</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>