unpackaged/main/default/objects/clcommon__Job__c/fields/clcommon__Label__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Label__c</fullName>
    <label>Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>