unpackaged/main/default/objects/clcommon__Job__c/fields/clcommon__Last_Used_Query__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Last_Used_Query__c</fullName>
    <description>Representative example of a query that the job executes. User may copy this into User Query  field and modify.</description>
    <inlineHelpText>Representative example of a query that the job executes. User may copy this into User Query  field and modify.</inlineHelpText>
    <label>Default Query</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>