unpackaged/main/default/objects/clcommon__Job__c/validationRules/clcommon__Batch_Size_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>clcommon__Batch_Size_Validation_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>clcommon__Batch_Size__c &lt;= 0 || clcommon__Batch_Size__c &gt; 2000</errorConditionFormula>
    <errorDisplayField>clcommon__Batch_Size__c</errorDisplayField>
    <errorMessage>Error: Batch size cannot be outside of range [1, 2000]</errorMessage>
</ValidationRule>