unpackaged/main/default/objects/clcommon__Job__c/validationRules/clcommon__Custom_query_check_for_pipelined_job.validationRule-meta.xml
<ValidationRule>
    <fullName>clcommon__Custom_query_check_for_pipelined_job</fullName>
    <active>true</active>
    <description>For pipelined job custom query is not supported.</description>
    <errorConditionFormula>AND ( NOT( OR(ISNULL(clcommon__Custom_Query_Class__c), ISBLANK(clcommon__Custom_Query_Class__c)) ), (clcommon__Pipelined__c  = true))</errorConditionFormula>
    <errorMessage>For pipelined Job custom query is not supported.</errorMessage>
</ValidationRule>