unpackaged/main/default/objects/clcommon__Job__c/validationRules/clcommon__Number_of_Instance_for_abort_forcefully.validationRule-meta.xml
<ValidationRule>
    <fullName>clcommon__Number_of_Instance_for_abort_forcefully</fullName>
    <active>true</active>
    <description>If abort forcefully is set as true than the number of instances should not be greater than one.</description>
    <errorConditionFormula>AND((clcommon__Abort_Mutliple_Instances__c = true),  clcommon__Number_Of_Instances__c  &gt; 1)</errorConditionFormula>
    <errorMessage>If abort forcefully is set as true than the number of instances should not be greater than one.</errorMessage>
</ValidationRule>